<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.ambeyindustry.countryguide.DetailFragment">

        <ImageView
                android:id="@+id/flag"
                tools:src="@drawable/ind"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/country"
                tools:text="India"
                android:textSize="25sp"
                android:paddingBottom="2dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/nativeName"
                tools:text="भारत"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/capital"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/capital"
                        tools:text="New Delhi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/area"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/area"
                        tools:text="12700 sq. km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/population"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/population"
                        tools:text="127000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/demonym"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="demonym"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/demonym"
                        tools:text="Indian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/calling_code"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="caling code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/callingCode"
                        tools:text="91"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/region"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/region"
                        tools:text="Asia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/language"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/language"
                        tools:text="Hindi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/time_zone"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="timezone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/timezone"
                        tools:text="UTC+5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:text="@string/gini"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        tools:text="gini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="16sp"
                        android:id="@+id/gini"
                        tools:text="23.3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>